syntax = "proto3";
package sovannarith;

//option java_multiple_files = true;
option java_package = "com.info.sovannarith.generated";
option java_outer_classname = "CourseProto";
option java_generic_services = true;

service SearchService {
  rpc GetCourse(GetCourseRequest) returns (Course) {}
}

message GetCourseRequest {
  int32 id = 1;
}

message Course {
  int32 id = 1;
  string course_name = 2;
  repeated Student student = 3;
}
message Student {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  repeated PhoneNumber phone = 5;
  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }
  enum PhoneType {
    MOBILE = 0;
    LANDLINE = 1;
  }
}

service FooService {
  rpc GetFoo (GetFooRequest) returns (GetFooResponse) {}
}

message GetFooRequest {
  string id = 1;
}

message GetFooResponse {
  string fooName = 1;
  int64 fooValue = 2;
}
